--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,8 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+@import 'index';
+
 // --- ここから追加 ---
 .navbar-laravel {
   background-color: #fff;
