--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -166,6 +166,43 @@
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-  
+}
+
+.itemCaption {
+  line-height: 30px;
+  position: relative;
+  &.-long {
+    padding-bottom: 30px;
+    button {
+      height: 50px;
+      align-items: flex-end;
+      color: rgb(67, 195, 238);
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 70%);
+    }
+  }
+
+  &.is-hide {
+    overflow: hidden;
+    height: 300px;
+
+    button {
+      height: 50px;
+      align-items: flex-end;
+      color: rgb(67, 195, 238);
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 70%);
+    }
+  }
+  button {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    border: none;
+
+  }
 }
 
