--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10231,3 +10231,7 @@ nav #Navber .navbar-nav .nav-item #post-link {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+
+.dropdown-menu {
+  width: 250px;
+}
