--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -1,7 +1,37 @@
 .flex-grow {
   flex-grow: 1;
 }
-
+@media screen and (min-width: 769px) {
+  .home_image img{
+    max-width: 100%; 
+    height: auto;
+    position: relative;
+  }
+  .home_caption {
+    position: absolute;
+    top: 20%;
+    left: 30%;
+  }
+  .mobile_image {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .home_image img{
+    max-width: 100%; 
+    height: auto;
+    position: relative;
+  }
+  .home_caption {
+    position: absolute;
+    top: 10%;
+    left: 3%;
+    color: white;
+  }
+  .pc_image {
+    display: none;
+  }
+}
 @media screen and (min-width: 768px) {
   .mobile_ranking-ribbon {
     display: none;
@@ -254,7 +284,7 @@
   .mobile_review {
     display: none;
   }
-  img {
+  .item_image img {
     width: 200px;
   }
 }
