--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@
   flex-grow: 1;
 }
 
-@media screen and (min-width: 769px) {
+@media (min-width: 769px) {
   .home_image img {
     max-width: 100%;
     height: auto;
@@ -19,7 +19,7 @@
     display: none;
   }
 }
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .home_image img {
     max-width: 100%;
     height: auto;
@@ -37,7 +37,7 @@
     display: none;
   }
 }
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
   .mobile_ranking-ribbon {
     display: none;
   }
@@ -60,7 +60,7 @@
     -webkit-box-reflect: below -10px -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.6));
   }
 }
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .ranking-ribbon {
     display: none;
   }
@@ -269,7 +269,7 @@
   display: flex;
 }
 
-@media screen and (min-width: 769px) {
+@media (min-width: 769px) {
   .mobile_review {
     display: none;
   }
@@ -278,7 +278,7 @@
     width: 200px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .item_field {
     display: block !important;
   }
