--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -1,7 +1,7 @@
 .flex-grow {
   flex-grow: 1;
 }
-@media screen and (min-width: 769px) {
+@media (min-width: 769px) {
   .home_image img{
     max-width: 100%; 
     height: auto;
@@ -16,7 +16,7 @@
     display: none;
   }
 }
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .home_image img{
     max-width: 100%; 
     height: auto;
@@ -32,7 +32,7 @@
     display: none;
   }
 }
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
   .mobile_ranking-ribbon {
     display: none;
   }
@@ -69,7 +69,7 @@
     -webkit-box-reflect: below -10px -webkit-linear-gradient(top,rgba(0,0,0,0),rgba(0,0,0,0)10%,rgba(0,0,0,0.6));
   }
 }
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .ranking-ribbon {
     display: none;
   }
@@ -280,7 +280,7 @@
 .item_field {
   display: flex;
 }
-@media screen and (min-width: 769px) {
+@media (min-width: 769px) {
   .mobile_review {
     display: none;
   }
@@ -288,7 +288,7 @@
     width: 200px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .item_field {
     display: block!important;
   }
